# VYRA-MUSIC

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
Inno Setup 6/: unins000.msg
installer/: vyra-setup.iss
src/: App.tsx  index.css
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/api/: lyrics.ts  spotify.ts  updater.ts  youtube.ts
src/components/: AlbumCard.tsx  ArtistAvatar.tsx  FullscreenPlayer.tsx  LyricsPanel.tsx  MiniPlayer.tsx  NowPlayingSidebar.tsx  Player.tsx  SearchResults.tsx  Sidebar.tsx  SongContextMenu.tsx  TitleBar.tsx  Tooltip.tsx  TrackCard.tsx  TrackRow.tsx
src/store/: appStore.ts  playerStore.ts
src/views/: ArtistView.tsx  ExploreView.tsx  HomeView.tsx  LibraryView.tsx  PlaylistView.tsx  QueueView.tsx  SettingsView.tsx
