[package]
name = "vyra"
version = "1.1.0"
description = "VYRA - YouTube Music Desktop Client"
authors = ["fast hand"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls", "stream", "cookies"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
bytes = "1"
futures = "0.3"
dirs = "5"
open = "5"
souvlaki = "0.7"
discord-rich-presence = "0.2"
image = "0.25"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
] }
